GNOME Bugzilla – Bug 650382
GtkButton uses wrong values in grab
Last modified: 2011-05-17 11:19:10 UTC
GtkButton::gtk_real_button_activate does: if (gdk_device_grab (device, priv->event_window, GDK_OWNERSHIP_WINDOW, TRUE, GDK_KEY_PRESS | GDK_KEY_RELEASE, NULL, time) == GDK_GRAB_SUCCESS) But it should use GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK as mask, not the nonsensical non-mask GDK_KEY_PRESS | GDK_KEY_RELEASE.
good catch
Yikes, my bad very likely... just pushed a fix