button: Fix typo in keyboard grab's evmask

https://bugzilla.gnome.org/show_bug.cgi?id=650382, spotted
by Alexander Larsson.